--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ nav ul li a {
 .menu-redes {
     display: flex;
     flex-direction: row-reverse;
-    height: 100%;
+    height: 70%;
     align-items: center;
 }
 
@@ -255,10 +255,11 @@ nav ul li a {
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 3px;
+    padding-bottom: 3px;
     font-family: arial;
     overflow: auto;
     min-width: 30%;
-    height: 90%;
+    height: 100%;
 }
 
 .contacto {
@@ -318,6 +319,11 @@ nav ul li a {
     font-family: arial;
     font-size: 20px;
     margin-top: 10px;
+}
+
+.suscripcion{
+    font-style: italic;
+    font-size: 13px;
 }
 
 
@@ -494,7 +500,7 @@ nav ul li a {
     nav ul li a {
         display: flex;
         color: rgb(4, 30, 30);
-        font-size: 10px;
+        font-size: 8px;
         font-family: arial;
         border-width: 2px;
         text-align: center;
@@ -507,7 +513,7 @@ nav ul li a {
     .menu a:hover {
         display: flex;
         color: rgb(4, 30, 30);
-        font-size: 10px;
+        font-size: 9px;
         font-family: arial;
         font-weight: bold;
     }
@@ -552,8 +558,9 @@ nav ul li a {
 
     background-color: none;
     font-family: arial;
-    size: 10px;
+   font-size: 12px;
     padding: 1%;
+    text-overflow: unset;
 }
 
 /* FORMULARIO */
@@ -581,5 +588,11 @@ nav ul li a {
 .form text {
     padding: 10px;
 }
-
+ /* LOGOS REDES */
+ .menu-redes img {
+    height: 70px;
+    align-items: flex-end;
+    padding: 15%;
+}
 /* FIN 480PX */
+
