--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
 }
-
-
 
 .header {
     min-height: 10vh;
@@ -42,14 +39,12 @@
     margin: 10px, auto
 }
 
-
 .nav ul {
     display: flex;
     align-items: center;
     justify-content: space-around;
     justify-content: center;
 }
-
 
 .nav ul li {
     width: 100%;
@@ -108,7 +103,7 @@ nav ul li a {
 }
 
 .main {
-    height: 70vh;
+    height: 90vh;
     display: flex;
     background-color:#F8F1F9;
     display: flex;
@@ -117,19 +112,19 @@ nav ul li a {
 }
 /* PROPIEDADES */
 .main-propiedades {
-    height: 75vh;
+    height: 90vh;
     display: grid;
 }
-
 
 .grids {
     grid-gap: 5px 5px;
     display: grid;
     height: 98%;
     width: 70%;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 70% 30%;
     background-color: antiquewhite;
 }
+
 
 .seccion-1 {
 
@@ -139,19 +134,26 @@ nav ul li a {
     background-color: deepskyblue;
     grid-gap: 5px 5px;
 
+   }
+.seccion-1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
+
 
 .seccion-1 div {
     border: 1px solid black;
 }
 
-.seccion-1 div:hover {
+.seccion-1 img:hover {
     transform: scale(1.3);
 }
 
 .seccion-2 {
     display: grid;
-    grid-template-rows: 70% 30%;
+    grid-template-rows: 80% 20%;
     grid-gap: 5px 5px;
 }
 
@@ -200,10 +202,8 @@ nav ul li a {
     height: 90%;
     text-align: justify;
     font-family: arial;
-   
     margin-left: 5%;
-    margin-right: 5%;
-   
+    margin-right: 5%;   
     padding: 1%;
     overflow: scroll;
     margin-top: 1%;
@@ -214,10 +214,8 @@ nav ul li a {
     height: 90%;
     align-items: center;
     font-family: arial;
-   
     margin-left: 5%;
     margin-right: 5%;
-   
     padding: 1%;
     position: relative;
     margin-top: 1%;
@@ -345,7 +343,6 @@ nav ul li a {
         margin: 0, auto;
     }
 
-
     .logo img {
         max-height: 50px;
 
@@ -356,8 +353,6 @@ nav ul li a {
         font-size: 12px;
         font-family: arial;
         border: none;
-
-
         justify-content: space-evenly;
         padding: 5px;
         text-align: center;
@@ -399,7 +394,6 @@ nav ul li a {
         height: 45%;
         text-align: justify;
         font-family: arial;
-        background-color: aquamarine;
         margin-left: 5%;
         margin-right: 5%;
         border: 3px solid black;
@@ -417,7 +411,6 @@ nav ul li a {
         align-items: center;
         align-items: center;
         font-family: arial;
-        background-color: aquamarine;
         margin-left: 5%;
         margin-right: 5%;
         border: 3px solid black;
@@ -524,7 +517,6 @@ nav ul li a {
         font-family: arial;
         font-weight: bold;
         border-width: 4px;
-       
         justify-content: space-evenly;
         padding: 5px;
         text-align: center;
